--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
                         <p>Hospitality and Resorts Operation Management</p>
                         <div class="time">Present</div>
                         <div class="time">LinkedIn Profile: https://www.linkedin.com/in/jashanpal-singh-aba998221</div>
-                        <div class="time"> Here is my inforgraphics <a href="folder/file.pdf" >Click here to view my portfolio</a></div>
+                        <div class="time"> Here is my inforgraphics <a href="images/file.pdf" >Click here to view my portfolio</a></div>
 
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
