--- a/home.html
+++ b/home.html
@@ -180,6 +180,33 @@
     </div> <!-- end of basic-2 -->
     <!-- end of services -->
 
+<!-- pAcademic Work-->
+<div id="details" class="basic-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="h2-heading">Academic Work</h2>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="text-box">
+                    <h4>College</h4>
+                    <div class="time">Current</div>
+                    <p>Hospitality and Resorts Operation Management</p>
+                </div> <!-- end of text-box -->
+            </div> <!-- end of col -->
+            <div class="col-lg-4">
+                <div class="text-box">
+                    <h4>High School</h4>
+                    <div class="time">2017 - Winter</div>
+                    <p>Studied Arts</p>
+                </div> <!-- end of text-box -->
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of basic-2 -->
+<!-- end of services -->
 
     <!-- Projects -->
     <div id="projects" class="basic-3">
