--- a/home.html
+++ b/home.html
@@ -57,6 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#details">Images</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#projects">Academic</a>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
@@ -180,8 +183,8 @@
     </div> <!-- end of basic-2 -->
     <!-- end of services -->
 
-<!-- pAcademic Work-->
-<div id="details" class="basic-2">
+<!-- Academic Work-->
+<div id="projects" class="basic-2">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
